footer: made responsive

--- a/home.html
+++ b/home.html
@@ -582,12 +582,12 @@
                         </div>
                         <span class="font-18 footer-contact-content">
                             MARSHMX, UNIT 1, CYFARTHA INDUSTRIAL ESTATE, MERTHYR TYDFIL, CF4 78PE
-                            <a class="footer-contact-location" href="javascrip:void(0);">GET DIRECTIONS</a>
+                            <a class="text-btn font-12 text-uppercase footer-contact-location" href="javascrip:void(0);">GET DIRECTIONS</a>
                         </span>
                     </div>
                 </div>
                 <div class="footer-update-wrapper">
-                    <h3 class="h2 font-white">SIGN UP & STAY UPDATED</h3>
+                    <h3 class="h2 font-white footer-form-title">SIGN UP & STAY UPDATED</h3>
                     <form class="footer-sign-up-form">
                         <input class="font-white font-18" type="email" placeholder="ENTER EMAIL ADDRESS..." required>
                         <button class="btn primary-btn cursor-pointer footer-sign-up-btn" type="submit">SIGN ME UP</button>
