created hero section working on featured section

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
 <body>
     <!----- Header ----->
     <div class="bg-black info-bar">
+        <div></div>
         <div class="container">
             <div class="info-bar-wrapper">
                 <div class="info-bar-items">
@@ -509,9 +510,99 @@
         </div>
     </header>
 
-
-    <section style="height: 500px;">
+    <!----- Hero section ----->
+    <section class="overflow-hidden hero-section">
+        <div class="container">
+            <div class="hero-main-wrapper">
+                <div class="hero-content-wrapper">
+                    <h1 class="font-white text-uppercase hero-title">
+                        <span>EUROPE'S LARGEST </span>
+                        OFF ROAD CENTRE
+                    </h1>
+                    <p class="font-white hero-dec">
+                        Welcome to Marsh MX, Europe's largest off road bike centre, providing you with a first class, friendly service for all your off-road biking needs!
+                    </p>
+                    <div class="hero-btn-wrapper">
+                        <a class="btn primary-btn" href="javascript:void(0);">VIEW PRODUCT</a>
+                        <a class="btn secondary-btn" href="javascript:void(0);">SHOP ALL</a>
+                    </div>
+                </div>
+                <div class="hero-media">
+                    <img class="img-cover" src="assets/images/sections/hero-section/hero-image.jpg" alt="hero-img">
+                </div>
+            </div>
+        </div>
     </section>
+
+    <!----- Featured slider section ----->
+    <section class="overflow-hidden featured-slider-section home-featured-slider">
+        <div class="container">
+            <h2 class="font-black text-uppercase">FEATURED BIKES</h2>
+            <div class="featured-slider splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="primary-slider-arrows splide__arrows splide__arrows--ltr">
+                    <button class="splide__arrow splide__arrow--prev" type="button" aria-label="Previous slide" aria-controls="splide01-track">
+                        <svg>...</svg>
+                    </button>
+                    <button class="splide__arrow splide__arrow--next" type="button" aria-label="Next slide" aria-controls="splide01-track">
+                        <svg>...</svg>
+                    </button>
+                </div>
+                <div class="featured-track splide__track">
+                    <ul class="featured-list splide__list">
+                        <li class="featured-slide splide__slide">
+                            <div class="featured-slider-wrapper">
+                                <div class="mx-auto featured-slider-img-content">
+                                    <img class="img-cover" src="assets/images/sections/featured-section/featured-img-01.png" alt="featured-img">
+                                </div>
+                                <div class="featured-slider-content">
+                                    <h4 class="text-uppercase featured-content-title">HUSQVARNA</h4>
+                                    <h4 class="text-uppercase featured-content-caption">FC 350 2022</h4>
+                                    <h4 class="featured-content-price">RRP: £8,749.00</h4>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="featured-slide splide__slide">
+                            <div class="featured-slider-wrapper">
+                                <div class="mx-auto featured-slider-img-content">
+                                    <img class="img-cover" src="assets/images/sections/featured-section/featured-img-02.png" alt="featured-img">
+                                </div>
+                                <div class="featured-slider-content">
+                                    <h4 class="text-uppercase featured-content-title">HONDA</h4>
+                                    <h4 class="text-uppercase featured-content-caption">CRF250R 2022</h4>
+                                    <h4 class="featured-content-price">RRP: £8,049.00</h4>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="featured-slide splide__s lide">
+                            <div class="featured-slider-wrapper">
+                                <div class="mx-auto featured-slider-img-content">
+                                    <img class="img-cover" src="assets/images/sections/featured-section/featured-img-01.png" alt="featured-img">
+                                </div>
+                                <div class="featured-slider-content">
+                                    <h4 class="text-uppercase featured-content-title">HUSQVARNA</h4>
+                                    <h4 class="text-uppercase featured-content-caption">FC 350 2022</h4>
+                                    <h4 class="featured-content-price">RRP: £8,749.00</h4>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="featured-slide splide__slide">
+                            <div class="featured-slider-wrapper">
+                                <div class="mx-auto featured-slider-img-content">
+                                    <img class="img-cover" src="assets/images/sections/featured-section/featured-img-02.png" alt="featured-img">
+                                </div>
+                                <div class="featured-slider-content">
+                                    <h4 class="text-uppercase featured-content-title">HONDA</h4>
+                                    <h4 class="text-uppercase featured-content-caption">CRF250R 2022</h4>
+                                    <h4 class="featured-content-price">RRP: £8,049.00</h4>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
