--- a/home.html
+++ b/home.html
@@ -541,10 +541,14 @@
             <div class="featured-slider splide" role="group" aria-label="Splide Basic HTML Example">
                 <div class="primary-slider-arrows splide__arrows splide__arrows--ltr">
                     <button class="splide__arrow splide__arrow--prev" type="button" aria-label="Previous slide" aria-controls="splide01-track">
-                        <svg>...</svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.732 21.742">
+                            <path id="Path_16024" data-name="Path 16024" d="M6.655.013,3.048,6.062,0,11.2,3.049,16.3l3.262,5.454h6.075L6.1,11.2,12.732.013Z" transform="translate(12.732 21.755) rotate(180)" fill="currentColor" />
+                        </svg>
                     </button>
                     <button class="splide__arrow splide__arrow--next" type="button" aria-label="Next slide" aria-controls="splide01-track">
-                        <svg>...</svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox=" 0 0 12.732 21.742">
+                            <path id="Path_16024" data-name="Path 16024" d="M6.655.013,3.048,6.062,0,11.2,3.049,16.3l3.262,5.454h6.075L6.1,11.2,12.732.013Z" transform="translate(12.732 21.755) rotate(180)" fill="currentColor" />
+                        </svg>
                     </button>
                 </div>
                 <div class="featured-track splide__track">
@@ -573,7 +577,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="featured-slide splide__s lide">
+                        <li class="featured-slide splide__slide">
                             <div class="featured-slider-wrapper">
                                 <div class="mx-auto featured-slider-img-content">
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-01.png" alt="featured-img">
