created: explore more, two column, cta banner sections

--- a/home.html
+++ b/home.html
@@ -535,7 +535,7 @@
     </section>
 
     <!----- Featured slider section ----->
-    <section class="overflow-hidden featured-slider-section home-featured-slider">
+    <section class="overflow-hidden home-featured-slider">
         <div class="container">
             <h2 class="font-black text-uppercase">FEATURED BIKES</h2>
             <div class="featured-slider splide" role="group" aria-label="Splide Basic HTML Example">
@@ -607,6 +607,71 @@
         </div>
     </section>
 
+    <!----- Explore more section ----->
+    <section class="overflow-hidden explore-more-section home-explore-more">
+        <div class="container">
+            <h2 class="text-uppercase font-white text-center">EXPLORE BIKES</h2>
+            <div class="explore-slider splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="explore-track splide__track">
+                    <ul class="explore-list splide__list">
+                        <li class="explore-slide splide__slide">
+                            <div class="explore-wrapper">
+                                <img class="img-cover" src="assets/images/sections/explore-section/explore-img-01.png" alt="explore-img">
+                                <h3 class="font-60 text-uppercase font-white explore-media-title">MOTOCROSS</h3>
+                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
+                            </div>
+                        </li>
+                        <li class="explore-slide splide__slide">
+                            <div class="explore-wrapper">
+                                <img class="img-cover" src="assets/images/sections/explore-section/explore-img-02.png" alt="explore-img">
+                                <h3 class="font-60 text-uppercase font-white explore-media-title">KIDS</h3>
+                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
+                            </div>
+                        </li>
+                        <li class="explore-slide splide__slide">
+                            <div class="explore-wrapper">
+                                <img class="img-cover" src="assets/images/sections/explore-section/explore-img-03.png" alt="explore-img">
+                                <h3 class="font-60 text-uppercase font-white explore-media-title">ENDURO</h3>
+                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!----- Two column section ----->
+    <section class="overflow-hidden two-column-section champions-column-section">
+        <div class="container">
+            <div class="two-column-wrapper">
+                <div class="two-column-img-content">
+                    <img class="img-cover" src="assets/images/sections/two-column-section/two-column-img-01.png" alt="two-column-img">
+                </div>
+                <div class="two-column-content">
+                    <h2 class="font-40 font-black two-column-title">
+                        A HOME FOR
+                        <span>CHAMPIONS</span>
+                    </h2>
+                    <p class="font-18 two-column-description">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    </p>
+                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">VIEW FULL STORY</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!----- Cta banner section ----->
+    <section class="cta-banner-section home-cta-banner">
+        <div class="cta-banner-wrapper">
+            <img class="img-cover cta-banner-img" src="assets/images/sections/cta-banner-section/cta-banner-img-01.png" alt="cta-banner-img">
+            <div class="cta-banner-content">
+                <h2 class="font-40 font-white cta-banner-title">PARTS FINDER</h2>
+                <a class="btn primary-btn" href="javascript:void(0);">LEARN MORE</a>
+            </div>
+        </div>
+    </section>
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
