update font family in css and html

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
                 <div class="header-items-wrapper">
                     <ul class="header-items">
                         <li class="header-item-link">
-                            <a class="h6 header-link" href="javascript:void(0);">SHOP NOW
+                            <a class="font-22 header-link" href="javascript:void(0);">SHOP NOW
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="square" stroke-linejoin="round" class="header-link-icon lucide lucide-plus-icon lucide-plus">
                                     <path d="M5 12h14" />
                                     <path d="M12 5v14" />
@@ -222,19 +222,19 @@
                             </div>
                         </li>
                         <li class="header-item-link">
-                            <a class="h6 header-link" href="javascript:void(0);">PARTS FINDER</a>
+                            <a class="font-22 header-link" href="javascript:void(0);">PARTS FINDER</a>
                         </li>
                         <li class="header-item-link">
-                            <a class="h6 header-link" href="javascript:void(0);">FINANCE</a>
+                            <a class="font-22 header-link" href="javascript:void(0);">FINANCE</a>
                         </li>
                         <li class="header-item-link">
-                            <a class="h6 header-link" href="javascript:void(0);">NEWS</a>
+                            <a class="font-22 header-link" href="javascript:void(0);">NEWS</a>
                         </li>
                         <li class="header-item-link">
-                            <a class="h6 header-link" href="javascript:void(0);">SERVICING</a>
+                            <a class="font-22 header-link" href="javascript:void(0);">SERVICING</a>
                         </li>
                         <li class="header-item-link submenu-link">
-                            <a class="h6 header-link" href="javascript:void(0);">ABOUT US
+                            <a class="font-22 header-link" href="javascript:void(0);">ABOUT US
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="square" stroke-linejoin="round" class="header-link-icon lucide lucide-plus-icon lucide-plus">
                                     <path d="M5 12h14" />
                                     <path d="M12 5v14" />
@@ -255,7 +255,7 @@
                             </div>
                         </li>
                         <li class="header-item-link">
-                            <a class="h6 header-link" href="javascript:void(0);">CONTACT US</a>
+                            <a class="font-22 header-link" href="javascript:void(0);">CONTACT US</a>
                         </li>
                     </ul>
                     <div class="header-features-wrapper">
@@ -515,9 +515,9 @@
         <div class="container">
             <div class="hero-main-wrapper">
                 <div class="hero-content-wrapper">
-                    <h1 class="font-white text-uppercase hero-title">
-                        <span>EUROPE'S LARGEST </span>
-                        OFF ROAD CENTRE
+                    <h1 class="font-white hero-title">
+                        EUROPE'S LARGEST
+                        <span class="font-white">OFF ROAD CENTRE</span>
                     </h1>
                     <p class="font-white hero-dec">
                         Welcome to Marsh MX, Europe's largest off road bike centre, providing you with a first class, friendly service for all your off-road biking needs!
@@ -537,7 +537,7 @@
     <!----- Featured slider section ----->
     <section class="overflow-hidden home-featured-slider">
         <div class="container">
-            <h2 class="font-black text-uppercase">FEATURED BIKES</h2>
+            <h2 class="font-black">FEATURED BIKES</h2>
             <div class="featured-slider splide" role="group" aria-label="Splide Basic HTML Example">
                 <div class="primary-slider-arrows splide__arrows splide__arrows--ltr">
                     <button class="splide__arrow splide__arrow--prev" type="button" aria-label="Previous slide" aria-controls="splide01-track">
@@ -559,8 +559,8 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-01.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="text-uppercase featured-content-title">HUSQVARNA</h4>
-                                    <h4 class="text-uppercase featured-content-caption">FC 350 2022</h4>
+                                    <h4 class="featured-content-title">HUSQVARNA</h4>
+                                    <h4 class="featured-content-caption">FC 350 2022</h4>
                                     <h4 class="featured-content-price">RRP: £8,749.00</h4>
                                 </div>
                             </div>
@@ -571,8 +571,8 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-02.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="text-uppercase featured-content-title">HONDA</h4>
-                                    <h4 class="text-uppercase featured-content-caption">CRF250R 2022</h4>
+                                    <h4 class="featured-content-title">HONDA</h4>
+                                    <h4 class="featured-content-caption">CRF250R 2022</h4>
                                     <h4 class="featured-content-price">RRP: £8,049.00</h4>
                                 </div>
                             </div>
@@ -583,8 +583,8 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-01.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="text-uppercase featured-content-title">HUSQVARNA</h4>
-                                    <h4 class="text-uppercase featured-content-caption">FC 350 2022</h4>
+                                    <h4 class="featured-content-title">HUSQVARNA</h4>
+                                    <h4 class="featured-content-caption">FC 350 2022</h4>
                                     <h4 class="featured-content-price">RRP: £8,749.00</h4>
                                 </div>
                             </div>
@@ -595,8 +595,8 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-02.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="text-uppercase featured-content-title">HONDA</h4>
-                                    <h4 class="text-uppercase featured-content-caption">CRF250R 2022</h4>
+                                    <h4 class="featured-content-title">HONDA</h4>
+                                    <h4 class="featured-content-caption">CRF250R 2022</h4>
                                     <h4 class="featured-content-price">RRP: £8,049.00</h4>
                                 </div>
                             </div>
@@ -617,21 +617,21 @@
                         <li class="explore-slide splide__slide">
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-01.png" alt="explore-img">
-                                <h3 class="font-60 text-uppercase font-white explore-media-title">MOTOCROSS</h3>
+                                <h3 class="font-60 font-white explore-media-title">MOTOCROSS</h3>
                                 <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
                             </div>
                         </li>
                         <li class="explore-slide splide__slide">
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-02.png" alt="explore-img">
-                                <h3 class="font-60 text-uppercase font-white explore-media-title">KIDS</h3>
+                                <h3 class="font-60 font-white explore-media-title">KIDS</h3>
                                 <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
                             </div>
                         </li>
                         <li class="explore-slide splide__slide">
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-03.png" alt="explore-img">
-                                <h3 class="font-60 text-uppercase font-white explore-media-title">ENDURO</h3>
+                                <h3 class="font-60 font-white explore-media-title">ENDURO</h3>
                                 <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
                             </div>
                         </li>
@@ -673,11 +673,66 @@
         </div>
     </section>
 
+    <!----- Shop by brand section ----->
+    <section class="shop-by-brand">
+        <div class="container">
+            <h2 class="font-40 font-black shop-brand-title">SHOP BY
+                <span>BRAND</span>
+            </h2>
+        </div>
+        <div class="shop-brand-slider splide" role="group" aria-label="Splide Basic HTML Example">
+            <div class="shop-brand-track splide__track">
+                <ul class="shop-brand-list splide__list">
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-01.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-02.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-03.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-04.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-05.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-06.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-07.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                    <li class="shop-brand-slide splide__slide">
+                        <div class="shop-brand-content">
+                            <img src="assets/images/sections/shop-by-brand-section/brand-img-08.png" alt="shop-brand-img">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <!----- Footer ----->
     <footer class="overflow-hidden">
         <div class="container">
             <h2 class="h4 font-white mx-auto footer-ig-link-wrapper">FOLLOW US ON INSTAGRAM
-                <a class="font-primary footer-ig-link" href="javascript:void(0);">@MARSHMX</a>
+                <a class="font-primary footer-ig-link" href="javascript:void(0);"> @MARSHMX</a>
             </h2>
             <div class="footer-slider splide" role="group" aria-label="Splide Basic HTML Example">
                 <div class="footer-track splide__track">
@@ -749,7 +804,7 @@
                 <div class="footer-update-wrapper">
                     <h3 class="h2 font-white footer-form-title">SIGN UP & STAY UPDATED</h3>
                     <form class="footer-sign-up-form">
-                        <input class="font-white font-18" type="email" placeholder="ENTER EMAIL ADDRESS..." required>
+                        <input class="font-white font-14" type="email" placeholder="ENTER EMAIL ADDRESS..." required>
                         <button class="btn primary-btn cursor-pointer footer-sign-up-btn" type="submit">SIGN ME UP</button>
                     </form>
                     <div class="footer-social-media-wrapper">
