--- a/home.html
+++ b/home.html
@@ -642,7 +642,7 @@
     </section>
 
     <!----- Two column section ----->
-    <section class="overflow-hidden two-column-section champions-column-section">
+    <section class="overflow-hidden two-column-bg-left-layer champions-column-section">
         <div class="container">
             <div class="two-column-wrapper">
                 <div class="two-column-img-content">
@@ -727,6 +727,78 @@
             </div>
         </div>
     </section>
+
+    <!----- Two column section ----->
+    <section class="overflow-hidden two-column-bg-right-layer finance-column-section">
+        <div class="container">
+            <div class="two-column-wrapper">
+                <div class="two-column-img-content">
+                    <img class="img-cover" src="assets/images/sections/two-column-section/two-column-img-02.png" alt="two-column-img">
+                </div>
+                <div class="two-column-content">
+                    <h2 class="font-40 font-black two-column-title">
+                        FINANCE YOUR
+                        <span>DREAM BIKE</span>
+                    </h2>
+                    <p class="font-18 two-column-description">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    </p>
+                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">VIEW FULL STORY</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!----- Testimonial section ----->
+    <section class="testimonial-section">
+        <div class="container">
+            <img class="img-cover testimonial-img" src="assets/images/sections/testimonial-section/testimonial-bg-img.png" alt="testimonial-img">
+            <div class="mx-auto testimonial-slider splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="testimonial-track splide__track">
+                    <ul class="testimonial-list splide__list">
+                        <li class="testimonial-slide splide__slide">
+                            <div class="mx-auto text-center testimonial-content-wrapper">
+                                <span class="font-primary testimonial-content-tag">"</span>
+                                <h4 class="font-primary testimonial-content">
+                                    MARSH MX HAVE A GREAT RANGE OF BIKES AND GEAR.
+                                    <span class="font-white">
+                                        IT'S WELL WORTH A LOOK IF YOU'RE IN THE AREA.
+                                    </span>
+                                </h4>
+                                <p class="font-18 font-white testimonial-location">Client, Location</p>
+                            </div>
+                        </li>
+                        <li class="testimonial-slide splide__slide">
+                            <div class="mx-auto text-center testimonial-content-wrapper">
+                                <span class="font-primary testimonial-content-tag">"</span>
+                                <h4 class="font-primary testimonial-content">
+                                    MARSH MX HAVE A GREAT RANGE OF BIKES AND GEAR.
+                                    <span class="font-white">
+                                        IT'S WELL WORTH A LOOK IF YOU'RE IN THE AREA.
+                                    </span>
+                                </h4>
+                                <p class="font-18 font-white testimonial-location">Client, Location</p>
+                            </div>
+                        </li>
+                        <li class="testimonial-slide splide__slide">
+                            <div class="mx-auto text-center testimonial-content-wrapper">
+                                <span class="font-primary testimonial-content-tag">"</span>
+                                <h4 class="font-primary testimonial-content">
+                                    MARSH MX HAVE A GREAT RANGE OF BIKES AND GEAR.
+                                    <span class="font-white">
+                                        IT'S WELL WORTH A LOOK IF YOU'RE IN THE AREA.
+                                    </span>
+                                </h4>
+                                <p class="font-18 font-white testimonial-location">Client, Location</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
