global css: update and add hover

--- a/home.html
+++ b/home.html
@@ -16,7 +16,6 @@
 <body>
     <!----- Header ----->
     <div class="bg-black info-bar">
-        <div></div>
         <div class="container">
             <div class="info-bar-wrapper">
                 <div class="info-bar-items">
@@ -384,7 +383,6 @@
                                         </div>
                                     </li>
                                 </ul>
-
                                 <ul id="about-us" class="stack-item-menus">
                                     <li class="stack-item">
                                         <div class="text-uppercase cursor-pointer stack-item-link">
@@ -523,8 +521,11 @@
                         Welcome to Marsh MX, Europe's largest off road bike centre, providing you with a first class, friendly service for all your off-road biking needs!
                     </p>
                     <div class="hero-btn-wrapper">
-                        <a class="btn primary-btn" href="javascript:void(0);">VIEW PRODUCT</a>
-                        <a class="btn secondary-btn" href="javascript:void(0);">SHOP ALL</a>
+                        <a class="btn primary-btn" href="javascript:void(0);">
+                        <span>VIEW PRODUCT</span></a>
+                        <a class="btn secondary-btn" href="javascript:void(0);">  
+                         <span>SHOP ALL</span>
+                        </a>
                     </div>
                 </div>
                 <div class="hero-media">
@@ -797,8 +798,6 @@
             </div>
         </div>
     </section>
-
-
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
