--- a/home.html
+++ b/home.html
@@ -619,21 +619,27 @@
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-01.png" alt="explore-img">
                                 <h3 class="font-60 font-white explore-media-title">MOTOCROSS</h3>
-                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
+                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">
+                                    <span>EXPLORE MOTOCROSS</span>
+                                </a>
                             </div>
                         </li>
                         <li class="explore-slide splide__slide">
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-02.png" alt="explore-img">
                                 <h3 class="font-60 font-white explore-media-title">KIDS</h3>
-                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
+                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">
+                                    <span>EXPLORE MOTOCROSS</span>
+                                </a>
                             </div>
                         </li>
                         <li class="explore-slide splide__slide">
                             <div class="explore-wrapper">
                                 <img class="img-cover" src="assets/images/sections/explore-section/explore-img-03.png" alt="explore-img">
                                 <h3 class="font-60 font-white explore-media-title">ENDURO</h3>
-                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">EXPLORE MOTOCROSS</a>
+                                <a class="btn primary-btn btn-big text-uppercase explore-media-btn" href="javascript:void(0);">
+                                <span>EXPLORE MOTOCROSS</span>
+                                </a>
                             </div>
                         </li>
                     </ul>
@@ -657,7 +663,9 @@
                     <p class="font-18 two-column-description">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                     </p>
-                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">VIEW FULL STORY</a>
+                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">
+                    <span>VIEW FULL STORY</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -669,7 +677,9 @@
             <img class="img-cover cta-banner-img" src="assets/images/sections/cta-banner-section/cta-banner-img-01.png" alt="cta-banner-img">
             <div class="cta-banner-content">
                 <h2 class="font-40 font-white cta-banner-title">PARTS FINDER</h2>
-                <a class="btn primary-btn" href="javascript:void(0);">LEARN MORE</a>
+                <a class="btn primary-btn" href="javascript:void(0);">
+                    <span>LEARN MORE</span>
+                </a>
             </div>
         </div>
     </section>
@@ -744,7 +754,9 @@
                     <p class="font-18 two-column-description">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                     </p>
-                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">VIEW FULL STORY</a>
+                    <a class="btn primary-btn text-uppercase" href="javascript:void(0);">
+                        <span>VIEW FULL STORY</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -876,7 +888,9 @@
                     <h3 class="h2 font-white footer-form-title">SIGN UP & STAY UPDATED</h3>
                     <form class="footer-sign-up-form">
                         <input class="font-white font-14" type="email" placeholder="ENTER EMAIL ADDRESS..." required>
-                        <button class="btn primary-btn cursor-pointer footer-sign-up-btn" type="submit">SIGN ME UP</button>
+                        <button class="btn primary-btn cursor-pointer footer-sign-up-btn" type="submit">
+                            <span>SIGN ME UP</span>
+                        </button>
                     </form>
                     <div class="footer-social-media-wrapper">
                         <div class="icon-btn icon-btn-medium icon-btn-primary">
